force-app/main/default/objects/Multi_MID_Biller_Terminology__mdt/Multi_MID_Biller_Terminology__mdt.object-meta.xml
<CustomObject>
    <label>Multi MID Biller Terminology</label>
    <pluralLabel>Multi MID Biller Terminologies</pluralLabel>
</CustomObject>