force-app/main/default/objects/Multi_MID_Biller_Terminology__mdt/fields/AB_Add_Disclaimer__c.field-meta.xml
<CustomField>
    <fullName>AB_Add_Disclaimer__c</fullName>
    <description>Disclaimer on Payment Configuration page</description>
    <label>AB Add Disclaimer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>