force-app/main/default/objects/Multi_MID_Biller_Terminology__mdt/fields/AB_Add_Info_Additional__c.field-meta.xml
<CustomField>
    <fullName>AB_Add_Info_Additional__c</fullName>
    <label>AB Add Info Additional</label>
    <length>255</length>
    <type>Text</type>
</CustomField>