force-app/main/default/objects/Multi_MID_Biller_Terminology__mdt/fields/AB_Add_Title__c.field-meta.xml
<CustomField>
    <fullName>AB_Add_Title__c</fullName>
    <inlineHelpText>AB: Add Biller Page in CSA process</inlineHelpText>
    <label>AB Add Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>