force-app/main/default/objects/Multi_MID_Biller_Terminology__mdt/fields/AB_Capture_Prefill_CSA_Note__c.field-meta.xml
<CustomField>
    <fullName>AB_Capture_Prefill_CSA_Note__c</fullName>
    <description>AB Capture Prefill CSA Note</description>
    <label>AB Capture Prefill CSA Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>