force-app/main/default/objects/Multi_MID_Biller_Terminology__mdt/fields/AB_Capture_Prefill_CSA_Title__c.field-meta.xml
<CustomField>
    <fullName>AB_Capture_Prefill_CSA_Title__c</fullName>
    <description>Text to display while capturing the Prefill CSA option in Payment Configuration Page</description>
    <label>AB Capture Prefill CSA Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>