force-app/main/default/objects/Multi_MID_Biller_Terminology__mdt/fields/AB_Next_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>AB_Next_Button_Label__c</fullName>
    <inlineHelpText>AB: Add Biller Page in CSA process</inlineHelpText>
    <label>AB Next Button Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>