force-app/main/default/objects/Multi_MID_Biller_Terminology__mdt/fields/Execution_Amex_Marketing_Info__c.field-meta.xml
<CustomField>
    <fullName>Execution_Amex_Marketing_Info__c</fullName>
    <label>Execution Amex Marketing Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>