force-app/main/default/objects/Multi_MID_Biller_Terminology__mdt/fields/FS_Title__c.field-meta.xml
<CustomField>
    <fullName>FS_Title__c</fullName>
    <inlineHelpText>FS: Fee Structure Page in CSA process</inlineHelpText>
    <label>FS Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>