force-app/main/default/objects/Multi_MID_Biller_Terminology__mdt/fields/PDF_Number_Nominated_Label__c.field-meta.xml
<CustomField>
    <fullName>PDF_Number_Nominated_Label__c</fullName>
    <label>PDF Number Nominated Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>