force-app/main/default/objects/Multi_MID_Biller_Terminology__mdt/fields/PDF_Sub_Title__c.field-meta.xml
<CustomField>
    <fullName>PDF_Sub_Title__c</fullName>
    <label>PDF Sub Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>