force-app/main/default/objects/Multi_MID_Biller_Terminology__mdt/fields/PDF_Title__c.field-meta.xml
<CustomField>
    <fullName>PDF_Title__c</fullName>
    <label>PDF Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>